[package]
name = "raw-printer"
description = "Direct RAW printing windows and linux"
version = "0.1.0"
edition = "2021"
license = "UNLICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
] }
