[package]
name = "raw-printer"
description = "Direct RAW printing on windows or linux"
repository = "https://github.com/mushonnip/raw-printer"
keywords = ["printer"]
version = "0.1.6"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
